tests/wsf/pass/regress/line_comment_no_space.wsa
push 123
push 456
exit
