tests/wsf/fail/line_comment_no_space.wsa
push 12
push 456
exit
